Backend updated to the day 28/11/2025

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ JWT_ACCESS_TOKEN_EXPIRES=3600
 SECRET_KEY=your-secret-key-change-in-production
 
 # CORS - URLs permitidas para el frontend
-CORS_ORIGINS=http://localhost:3000,http://localhost:8080,http://127.0.0.1:3000
+CORS_ORIGINS=http://localhost:3000,http://localhost:4200,http://localhost:8080
 
 # API
 API_PORT=5000
